# cookiecutter-data-science

./: LICENSE  README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: Makefile  README.md  pyproject.toml
{{ cookiecutter.repo_name }}/docs/: mkdocs.yaml
{{ cookiecutter.repo_name }}/docs/docs/: cli.md
{{ cookiecutter.repo_name }}/docs/docs/assets/css/: custom.css
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.repo_name }}/: __main__.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.repo_name }}/cli/: __init__.py
